# ros2_fiducial_registration_server

./: README.md
src/registration_msgs/: CMakeLists.txt  package.xml
src/registration_msgs/srv/: Registration.srv
src/registration_service/: CMakeLists.txt  package.xml
src/registration_service/include/registration_service/: registration_client.hpp  registration_server.hpp
src/registration_service/src/: reg_client_example_node.cpp  registration_client.cpp  registration_node.cpp  registration_server.cpp
